--- a/views/confirm-registration.hbs
+++ b/views/confirm-registration.hbs
@@ -185,7 +185,7 @@
                                       <img
                                         align="center"
                                         border="0"
-                                        src="{{banner}}"
+                                        src="{{{banner}}}"
                                         alt="Image"
                                         title="Image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 600px;"
