--- a/views/registration-successful.hbs
+++ b/views/registration-successful.hbs
@@ -185,7 +185,7 @@
                                       <img
                                         align="center"
                                         border="0"
-                                        src="{{banner}}"
+                                        src="{{{banner}}}"
                                         alt="Image"
                                         title="Image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 600px;"
@@ -268,10 +268,7 @@
                                     style="font-size: 14px; line-height: 160%;"
                                   ><span
                                       style="font-size: 20px; line-height: 32px;"
-                                    >You're almost ready to get started with us.
-                                      Please click on the button below to verify
-                                      your email address and enjoy exclusive
-                                      banking experience! </span></p>
+                                    >{{{content}}} </span></p>
                                 </div>
 
                               </td>
@@ -349,9 +346,7 @@
                                         style="font-size: 16px; line-height: 25.6px;"
                                       ><span
                                           style="color: #e67e23; line-height: 28.8px; font-size: 18px;"
-                                        >If you did not authorize this
-                                          operation, please ignore or report at
-                                          our</span>
+                                        >{{{warning}}}</span>
                                         <a
                                           rel="noopener"
                                           href="https://zivikbank.com"
@@ -465,11 +460,7 @@
                                   ><span
                                       style="font-size: 20px; line-height: 32px;"
                                     ><strong>Get in touch</strong></span></p>
-                                  <p
-                                    style="font-size: 14px; line-height: 160%;"
-                                  ><span
-                                      style="font-size: 16px; line-height: 25.6px; color: #ffffff;"
-                                    >+11 111 333 4444</span></p>
+
                                   <p
                                     style="font-size: 14px; line-height: 160%;"
                                   ><span
