--- a/views/confirm-registration.hbs
+++ b/views/confirm-registration.hbs
@@ -136,7 +136,7 @@
                                       <img
                                         align="center"
                                         border="0"
-                                        src="https://uploads-ssl.webflow.com/6405430dbac1369b9494f2e3/6412729faef16d915e3ba86b_zivik%20logo.svg"
+                                        src="https://zivikbank/uploads/Zivik-Logo.svg"
                                         alt="Image"
                                         title="Image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 32%;max-width: 179.2px;"
