--- a/views/withdrawal.hbs
+++ b/views/withdrawal.hbs
@@ -96,7 +96,7 @@
                     style="max-width: 320px;min-width: 600px;display: table-cell;vertical-align: top;"
                   >
                     <div
-                      style="background-color: {{{headerColor}}};width: 100% !important;"
+                      style="background-color: #252525;height: 100%;width: 100% !important;"
                     >
                       <!--[if (!mso)&(!IE)]><!-->
                       <div
@@ -136,13 +136,14 @@
                                       <img
                                         align="center"
                                         border="0"
-                                        src="https://assets.unlayer.com/projects/144943/1678699711721-Alfa-Logo.png"
+                                        src="https://zivikbank.com/Zivik-Logo.svg"
                                         alt="Image"
                                         title="Image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 32%;max-width: 179.2px;"
                                         width="179.2"
                                         class="v-src-width v-src-max-width"
                                       />
+
                                     </td>
                                   </tr>
                                 </table>
@@ -180,7 +181,7 @@
                                       style="padding-right: 0px;padding-left: 0px;"
                                       align="center"
                                     >
-                                      <!--src: https://assets.unlayer.com/projects/144943/1678704482518-Registration-Successful.png -->
+
                                       <img
                                         align="center"
                                         border="0"
@@ -262,55 +263,14 @@
                                     style="font-size: 14px; line-height: 160%;"
                                   ><span
                                       style="font-size: 22px; line-height: 35.2px;"
-                                    >Hi <strong>Kennedy, </strong></span></p>
+                                    >Hi
+                                      <strong>{{{name}}},
+                                      </strong></span></p>
                                   <p
                                     style="font-size: 14px; line-height: 160%;"
                                   ><span
                                       style="font-size: 20px; line-height: 32px;"
                                     >{{{content}}} </span></p>
-                                </div>
-
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-
-                        <table
-                          style="font-family:'Cabin',sans-serif;"
-                          role="presentation"
-                          cellpadding="0"
-                          cellspacing="0"
-                          width="100%"
-                          border="0"
-                        >
-                          <tbody>
-                            <tr>
-                              <td
-                                class="v-container-padding-padding"
-                                style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:'Cabin',sans-serif;"
-                                align="left"
-                              >
-
-                                <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
-                                <div align="center">
-                                  <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="" style="height:44px; v-text-anchor:middle; width:216px;" arcsize="9%"  stroke="f" fillcolor="#e53b24"><w:anchorlock/><center style="color:#FFFFFF;font-family:'Cabin',sans-serif;"><![endif]-->
-                                  <a
-                                    href=""
-                                    target="_blank"
-                                    class="v-button v-font-size"
-                                    style="box-sizing: border-box;display: inline-block;font-family:'Cabin',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #e53b24; border-radius: 4px;-webkit-border-radius: 4px; -moz-border-radius: 4px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;"
-                                  >
-                                    <span
-                                      class="v-line-height"
-                                      style="display:block;padding:14px 44px 13px;line-height:120%;"
-                                    ><span style="line-height: 16.8px;"><strong
-                                        ><span
-                                            style="line-height: 16.8px;"
-                                          >VERIFY YOUR EMAIL</span></strong>
-                                      </span>
-                                    </span>
-                                  </a>
-                                  <!--[if mso]></center></v:roundrect><![endif]-->
                                 </div>
 
                               </td>
@@ -344,7 +304,7 @@
                                     ><span
                                         style="font-size: 16px; line-height: 25.6px;"
                                       ><span
-                                          style="color: {{{mainColor}}}; line-height: 28.8px; font-size: 18px;"
+                                          style="color: #e67e23; line-height: 28.8px; font-size: 18px;"
                                         >{{{warning}}}</span>
                                         <a
                                           rel="noopener"
@@ -459,11 +419,7 @@
                                   ><span
                                       style="font-size: 20px; line-height: 32px;"
                                     ><strong>Get in touch</strong></span></p>
-                                  <p
-                                    style="font-size: 14px; line-height: 160%;"
-                                  ><span
-                                      style="font-size: 16px; line-height: 25.6px; color: #ffffff;"
-                                    >+11 111 333 4444</span></p>
+
                                   <p
                                     style="font-size: 14px; line-height: 160%;"
                                   ><span
@@ -715,7 +671,7 @@
                     style="max-width: 320px;min-width: 600px;display: table-cell;vertical-align: top;"
                   >
                     <div
-                      style="background-color: {{{footerColor}}};height: 100%;width: 100% !important;"
+                      style="background-color: #252525;height: 100%;width: 100% !important;"
                     >
                       <!--[if (!mso)&(!IE)]><!-->
                       <div
