--- a/views/transaction.hbs
+++ b/views/transaction.hbs
@@ -136,7 +136,7 @@
                                       <img
                                         align="center"
                                         border="0"
-                                        src="https://zivikbank.com/Zivik-Logo.svg"
+                                        src="https://zivikbank.com/uploads/Zivik-Logo.svg"
                                         alt="Image"
                                         title="Image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 32%;max-width: 179.2px;"
