--- a/views/registration-successful.hbs
+++ b/views/registration-successful.hbs
@@ -348,7 +348,7 @@
                                     style="line-height: 160%; font-size: 14px;"
                                   ><span
                                       style="font-size: 18px; line-height: 28.8px;"
-                                    >Zivik Bank Support Team</span></p>
+                                    >AS Finance LTD Team</span></p>
                                 </div>
 
                               </td>
