--- a/views/confirm-registration.hbs
+++ b/views/confirm-registration.hbs
@@ -394,7 +394,7 @@
                                     style="line-height: 160%; font-size: 14px;"
                                   ><span
                                       style="font-size: 18px; line-height: 28.8px;"
-                                    >Zivik Bank Support Team</span></p>
+                                    >AS Finance LTD Support Team</span></p>
                                 </div>
 
                               </td>
