--- a/views/transaction.hbs
+++ b/views/transaction.hbs
@@ -136,7 +136,7 @@
                                       <img
                                         align="center"
                                         border="0"
-                                        src="https://asfinanceltd.com/uploads/Colored-Logo.png"
+                                        src="{{domainName}}/uploads/Colored-Logo.png"
                                         alt="Image"
                                         title="Image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 32%;max-width: 179.2px;"
@@ -308,7 +308,7 @@
                                         >{{{warning}}}</span>
                                         <a
                                           rel="noopener"
-                                          href="https://asfinanceltd.com"
+                                          href="{{domainName}}"
                                           target="_blank"
                                         >website support</a></span>
                                     </span>
@@ -350,7 +350,7 @@
                                     style="line-height: 160%; font-size: 14px;"
                                   ><span
                                       style="font-size: 18px; line-height: 28.8px;"
-                                    >AS Finance LTD Support Team</span></p>
+                                    >{{companyName}} Support Team</span></p>
                                 </div>
 
                               </td>
@@ -703,8 +703,9 @@
                                     style="font-size: 14px; line-height: 180%;"
                                   ><span
                                       style="font-size: 16px; line-height: 28.8px;"
-                                    >Copyrights © AS Finance LTD All Rights
-                                      Reserved</span></p>
+                                    >Copyrights ©
+                                      {{companyName}}
+                                      All Rights Reserved</span></p>
                                 </div>
 
                               </td>
