--- a/views/transaction.hbs
+++ b/views/transaction.hbs
@@ -136,7 +136,7 @@
                                       <img
                                         align="center"
                                         border="0"
-                                        src="{{domainName}}/uploads/Colored-Logo.png"
+                                        src="https://landmarkintegratedservices.com/images/Landmark-Logo.png"
                                         alt="Image"
                                         title="Image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 32%;max-width: 179.2px;"
@@ -466,114 +466,6 @@
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top"
                                           >
                                             <a
-                                              href="https://facebook.com/"
-                                              title="Facebook"
-                                              target="_blank"
-                                            >
-                                              <img
-                                                src="https://cdn.tools.unlayer.com/social/icons/circle-black/facebook.png"
-                                                alt="Facebook"
-                                                title="Facebook"
-                                                width="32"
-                                                style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important"
-                                              />
-                                            </a>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                    <!--[if (mso)|(IE)]></td><![endif]-->
-
-                                    <!--[if (mso)|(IE)]><td width="32" style="width:32px; padding-right: 17px;" valign="top"><![endif]-->
-                                    <table
-                                      align="left"
-                                      border="0"
-                                      cellspacing="0"
-                                      cellpadding="0"
-                                      width="32"
-                                      height="32"
-                                      style="width: 32px !important;height: 32px !important;display: inline-block;border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;margin-right: 17px"
-                                    >
-                                      <tbody>
-                                        <tr style="vertical-align: top">
-                                          <td
-                                            align="left"
-                                            valign="middle"
-                                            style="word-break: break-word;border-collapse: collapse !important;vertical-align: top"
-                                          >
-                                            <a
-                                              href="https://linkedin.com/"
-                                              title="LinkedIn"
-                                              target="_blank"
-                                            >
-                                              <img
-                                                src="https://cdn.tools.unlayer.com/social/icons/circle-black/linkedin.png"
-                                                alt="LinkedIn"
-                                                title="LinkedIn"
-                                                width="32"
-                                                style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important"
-                                              />
-                                            </a>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                    <!--[if (mso)|(IE)]></td><![endif]-->
-
-                                    <!--[if (mso)|(IE)]><td width="32" style="width:32px; padding-right: 17px;" valign="top"><![endif]-->
-                                    <table
-                                      align="left"
-                                      border="0"
-                                      cellspacing="0"
-                                      cellpadding="0"
-                                      width="32"
-                                      height="32"
-                                      style="width: 32px !important;height: 32px !important;display: inline-block;border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;margin-right: 17px"
-                                    >
-                                      <tbody>
-                                        <tr style="vertical-align: top">
-                                          <td
-                                            align="left"
-                                            valign="middle"
-                                            style="word-break: break-word;border-collapse: collapse !important;vertical-align: top"
-                                          >
-                                            <a
-                                              href="https://instagram.com/"
-                                              title="Instagram"
-                                              target="_blank"
-                                            >
-                                              <img
-                                                src="https://cdn.tools.unlayer.com/social/icons/circle-black/instagram.png"
-                                                alt="Instagram"
-                                                title="Instagram"
-                                                width="32"
-                                                style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important"
-                                              />
-                                            </a>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                    <!--[if (mso)|(IE)]></td><![endif]-->
-
-                                    <!--[if (mso)|(IE)]><td width="32" style="width:32px; padding-right: 17px;" valign="top"><![endif]-->
-                                    <table
-                                      align="left"
-                                      border="0"
-                                      cellspacing="0"
-                                      cellpadding="0"
-                                      width="32"
-                                      height="32"
-                                      style="width: 32px !important;height: 32px !important;display: inline-block;border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;margin-right: 17px"
-                                    >
-                                      <tbody>
-                                        <tr style="vertical-align: top">
-                                          <td
-                                            align="left"
-                                            valign="middle"
-                                            style="word-break: break-word;border-collapse: collapse !important;vertical-align: top"
-                                          >
-                                            <a
                                               href="https://youtube.com/"
                                               title="YouTube"
                                               target="_blank"
@@ -610,7 +502,7 @@
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top"
                                           >
                                             <a
-                                              href="https://email.com/"
+                                              href="info@landmarkintegratedservices.com"
                                               title="Email"
                                               target="_blank"
                                             >
