--- a/views/confirm-registration.hbs
+++ b/views/confirm-registration.hbs
@@ -136,7 +136,7 @@
                                       <img
                                         align="center"
                                         border="0"
-                                        src="{{domainName}}/uploads/Mam-Logo.png"
+                                        src="https://landmarkintegratedservices.com/images/Landmark-Logo.png"
                                         alt="Image"
                                         title="Image"
                                         style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 32%;max-width: 179.2px;"
