--- a/views/reset-password.hbs
+++ b/views/reset-password.hbs
@@ -514,12 +514,12 @@
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top"
                                           >
                                             <a
-                                              href="https://facebook.com/"
+                                              href="https://t.me/landmarkintegratedservices"
                                               title="Facebook"
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://cdn.tools.unlayer.com/social/icons/circle-black/facebook.png"
+                                                src="https://landmarkintegratedservices.com/dashboard-images/telegram.png"
                                                 alt="Facebook"
                                                 title="Facebook"
                                                 width="32"
@@ -550,86 +550,14 @@
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top"
                                           >
                                             <a
-                                              href="https://linkedin.com/"
+                                              href="+41555391022"
                                               title="LinkedIn"
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://cdn.tools.unlayer.com/social/icons/circle-black/linkedin.png"
+                                                src="https://landmarkintegratedservices.com/dashboard-images/phone.png"
                                                 alt="LinkedIn"
                                                 title="LinkedIn"
-                                                width="32"
-                                                style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important"
-                                              />
-                                            </a>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                    <!--[if (mso)|(IE)]></td><![endif]-->
-
-                                    <!--[if (mso)|(IE)]><td width="32" style="width:32px; padding-right: 17px;" valign="top"><![endif]-->
-                                    <table
-                                      align="left"
-                                      border="0"
-                                      cellspacing="0"
-                                      cellpadding="0"
-                                      width="32"
-                                      height="32"
-                                      style="width: 32px !important;height: 32px !important;display: inline-block;border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;margin-right: 17px"
-                                    >
-                                      <tbody>
-                                        <tr style="vertical-align: top">
-                                          <td
-                                            align="left"
-                                            valign="middle"
-                                            style="word-break: break-word;border-collapse: collapse !important;vertical-align: top"
-                                          >
-                                            <a
-                                              href="https://instagram.com/"
-                                              title="Instagram"
-                                              target="_blank"
-                                            >
-                                              <img
-                                                src="https://cdn.tools.unlayer.com/social/icons/circle-black/instagram.png"
-                                                alt="Instagram"
-                                                title="Instagram"
-                                                width="32"
-                                                style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important"
-                                              />
-                                            </a>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                    <!--[if (mso)|(IE)]></td><![endif]-->
-
-                                    <!--[if (mso)|(IE)]><td width="32" style="width:32px; padding-right: 17px;" valign="top"><![endif]-->
-                                    <table
-                                      align="left"
-                                      border="0"
-                                      cellspacing="0"
-                                      cellpadding="0"
-                                      width="32"
-                                      height="32"
-                                      style="width: 32px !important;height: 32px !important;display: inline-block;border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;margin-right: 17px"
-                                    >
-                                      <tbody>
-                                        <tr style="vertical-align: top">
-                                          <td
-                                            align="left"
-                                            valign="middle"
-                                            style="word-break: break-word;border-collapse: collapse !important;vertical-align: top"
-                                          >
-                                            <a
-                                              href="https://youtube.com/"
-                                              title="YouTube"
-                                              target="_blank"
-                                            >
-                                              <img
-                                                src="https://cdn.tools.unlayer.com/social/icons/circle-black/youtube.png"
-                                                alt="YouTube"
-                                                title="YouTube"
                                                 width="32"
                                                 style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block !important;border: none;height: auto;float: none;max-width: 32px !important"
                                               />
@@ -658,7 +586,7 @@
                                             style="word-break: break-word;border-collapse: collapse !important;vertical-align: top"
                                           >
                                             <a
-                                              href="https://email.com/"
+                                              href="{{from}}"
                                               title="Email"
                                               target="_blank"
                                             >
