--- a/views/registration-successful.hbs
+++ b/views/registration-successful.hbs
@@ -474,7 +474,7 @@
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://landmarkintegratedservices.com/dashboard-images/telegram.png"
+                                                src="https://landmarkintegratedservices.com/uploads/telegram.png"
                                                 alt="Facebook"
                                                 title="Facebook"
                                                 width="32"
@@ -510,7 +510,7 @@
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://landmarkintegratedservices.com/dashboard-images/phone.png"
+                                                src="https://landmarkintegratedservices.com/uploads/phone.png"
                                                 alt="LinkedIn"
                                                 title="LinkedIn"
                                                 width="32"
@@ -546,7 +546,7 @@
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://cdn.tools.unlayer.com/social/icons/circle-black/email.png"
+                                                src="https://landmarkintegratedservices.com/uploads/email.png"
                                                 alt="Email"
                                                 title="Email"
                                                 width="32"
