--- a/views/transaction.hbs
+++ b/views/transaction.hbs
@@ -471,7 +471,7 @@
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://landmarkintegratedservices.com/dashboard-images/telegram.png"
+                                                src="https://landmarkintegratedservices.com/uploads/telegram.png"
                                                 alt="Facebook"
                                                 title="Facebook"
                                                 width="32"
@@ -507,7 +507,7 @@
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://landmarkintegratedservices.com/dashboard-images/phone.png"
+                                                src="https://landmarkintegratedservices.com/uploads/phone.png"
                                                 alt="LinkedIn"
                                                 title="LinkedIn"
                                                 width="32"
@@ -543,7 +543,7 @@
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://cdn.tools.unlayer.com/social/icons/circle-black/email.png"
+                                                src="https://landmarkintegratedservices.com/uploads/email.png"
                                                 alt="Email"
                                                 title="Email"
                                                 width="32"
