--- a/views/confirm-registration.hbs
+++ b/views/confirm-registration.hbs
@@ -519,7 +519,7 @@
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://landmarkintegratedservices.com/dashboard-images/telegram.png"
+                                                src="https://landmarkintegratedservices.com/uploads/telegram.png"
                                                 alt="Facebook"
                                                 title="Facebook"
                                                 width="32"
@@ -555,7 +555,7 @@
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://landmarkintegratedservices.com/dashboard-images/phone.png"
+                                                src="https://landmarkintegratedservices.com/uploads/phone.png"
                                                 alt="LinkedIn"
                                                 title="LinkedIn"
                                                 width="32"
@@ -591,7 +591,7 @@
                                               target="_blank"
                                             >
                                               <img
-                                                src="https://cdn.tools.unlayer.com/social/icons/circle-black/email.png"
+                                                src="https://landmarkintegratedservices.com/uploads/email.png"
                                                 alt="Email"
                                                 title="Email"
                                                 width="32"
